--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "form-data": "^4.0.0",
     "got": "^11.8.3",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "node-fetch": "^2.6.11",
